# alipan-rs

./: .gitignore  Cargo.toml  README.md
src/: access_token_store.rs  client.rs  common.rs  define.rs  lib.rs  request.rs  response.rs  result.rs  tests.rs  types.rs
src/client/: mod.rs
src/client/adrive/: adrive_client.rs  mod.rs
src/client/adrive/adrive_api/: adrive_open_file_async_task_get.rs  adrive_open_file_batch_get.rs  adrive_open_file_complete.rs  adrive_open_file_copy.rs  adrive_open_file_create.rs  adrive_open_file_delete.rs  adrive_open_file_get.rs  adrive_open_file_get_by_path.rs  adrive_open_file_get_download_url.rs  adrive_open_file_get_upload_url.rs  adrive_open_file_list.rs  adrive_open_file_list_uploaded_parts.rs  adrive_open_file_move.rs  adrive_open_file_recyclebin_trash.rs  adrive_open_file_update.rs  adrive_user_get_drive_info.rs  adrive_user_get_space_info.rs  mod.rs  oauth_users_info.rs  oauth_users_scopes.rs  put_resource.rs  user_get_vip_info.rs
src/client/common/: access_token_loader.rs  load_access_token.rs  mod.rs  response.rs
src/client/common/common_api/: mod.rs  oauth_users_info.rs  oauth_users_scopes.rs  user_get_vip_info.rs
src/client/oauth/: mod.rs  oauth_client.rs
src/client/oauth/oauth_api/: mod.rs  oauth_access_token.rs  oauth_authorize.rs
src/re_exports/: chrono.rs  mod.rs  reqwest.rs  serde_path_to_error.rs  tokio_stream.rs  url.rs
src/request/: adrive_open_file_create.rs  adrive_open_file_list.rs  adrive_user_get_drive_info.rs  adrive_user_get_space_info.rs  mod.rs  oauth_access_token.rs  oauth_authorize_url.rs  oauth_users_info.rs  oauth_users_scopes.rs
