[package]
name = "alipan"
version = "0.0.12"
edition = "2021"
description = "alipan sdk for rust"
license = "MPL-2.0"
repository = "https://github.com/niuhuan/alipan-rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
tokio = { version = "1", features = ["sync", "io-std"], default-features = false }
url = "2"
serde_json = "1"
serde = "1"
serde_derive = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_path_to_error = "0.1.16"
tokio-stream = "0.1"
tokio-util = "0.7"
anyhow = "1"
tracing = "0.1"

[features]
default = ["reqwest/default"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
backtrace = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "fs"] }
sha1 = "0.11.0-pre.3"
hex = "0.4.3"
